# dfx-extension-ping

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
dfx/: dependencies.json  extension.json  extension.json.tmpl
src/: main.rs
