[package]
name = "ping"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rikonor/dfx-extension-ping"

[[bin]]
name = "ping"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive", "env"] }
dfx-core = "0.1.3"
tokio = { version = "1.43.0", features = ["full"] }
